# pomodoro-tg

./: .gitignore  pyproject.toml
src/: main.py
